[gd_scene load_steps=6 format=2]

[ext_resource path="res://Upgrades/UpgradeButton.gd" type="Script" id=1]
[ext_resource path="res://check.png" type="Texture" id=2]
[ext_resource path="res://Upgrades/bg_normal.png" type="Texture" id=3]
[ext_resource path="res://Upgrades/bg_pressed.png" type="Texture" id=4]
[ext_resource path="res://Upgrades/default.png" type="Texture" id=5]

[node name="Upgrade" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="ButtonContainer"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ButtonContainer"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="ButtonContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1276.0
margin_bottom = 716.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TexBought" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 12, 12 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="ButtonContainer/TextureButton" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/TextureButton" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="ButtonContainer/TextureButton" to="." method="_on_Button_pressed"]
